--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   # ====================================================
-  # JOB 1: 构建服务端 (Docker - 保持不变)
+  # JOB 1: 构建服务端 (Docker)
   # ====================================================
   build-server:
     name: Build Server (Docker)
@@ -36,9 +36,10 @@ jobs:
         with:
           name: adaptix_server_linux_x64
           path: adaptix_server_linux_x64.tar.gz
+          overwrite: true  # <--- [修复] 允许覆盖旧产物，防止409报错
 
-# ====================================================
-  # JOB 2: 构建客户端 (重装甲版 - 全量依赖)
+  # ====================================================
+  # JOB 2: 构建客户端 (全量依赖版)
   # ====================================================
   build-client:
     name: Build Client
@@ -75,7 +76,6 @@ jobs:
         with:
           msystem: UCRT64
           update: true
-          # 这里列出了 Qt 开发最常用的所有核心模块
           install: >-
             git
             mingw-w64-ucrt-x86_64-toolchain
@@ -93,17 +93,16 @@ jobs:
             mingw-w64-ucrt-x86_64-qt6-5compat
 
       # ----------------------------------------------------------------
-      # Linux 环境依赖安装 (Ubuntu 全家桶)
+      # Linux 环境依赖安装 (Ubuntu 全家桶 + Private Headers)
       # ----------------------------------------------------------------
       - name: Install Linux Dependencies
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          # 这里对应安装了 Ubuntu 下的所有对应开发库
           sudo apt-get install -y build-essential cmake libssl-dev pkg-config \
             libgl1-mesa-dev libxkbcommon-dev \
-            qt6-base-dev \
-            qt6-declarative-dev \
+            qt6-base-dev qt6-base-private-dev \
+            qt6-declarative-dev qt6-declarative-private-dev \
             libqt6websockets6-dev \
             libqt6svg6-dev \
             libqt6shadertools6-dev \
@@ -118,7 +117,6 @@ jobs:
       - name: Install macOS Dependencies
         if: runner.os == 'macOS'
         run: |
-          # Homebrew 的 qt6 包本来就是巨大的全家桶，不需要拆分安装
           brew install qt6
           echo "CMAKE_PREFIX_PATH=$(brew --prefix qt6)" >> $GITHUB_ENV
 
@@ -175,35 +173,10 @@ jobs:
         with:
           name: ${{ matrix.artifact_name }}
           path: final_dist/${{ matrix.artifact_name }}
-
-      # ----------------------------------------------------------------
-      # 打包与上传
-      # ----------------------------------------------------------------
-      - name: Prepare Artifact
-        shell: bash
-        run: |
-          mkdir -p final_dist
-          
-          if [ "${{ runner.os }}" == "Windows" ]; then
-             cd AdaptixClient/build
-             7z a ../../final_dist/${{ matrix.artifact_name }} .
-          else
-             if [ -f "${{ matrix.output_file }}" ]; then
-                cp ${{ matrix.output_file }} final_dist/${{ matrix.artifact_name }}
-             else
-                echo "Error: Output file not found at ${{ matrix.output_file }}"
-                exit 1
-             fi
-          fi
-
-      - name: Upload Client Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.artifact_name }}
-          path: final_dist/${{ matrix.artifact_name }}
+          overwrite: true # <--- [修复] 允许覆盖旧产物，防止409报错
 
   # ====================================================
-  # JOB 3: 发布 (保持不变)
+  # JOB 3: 发布 Release
   # ====================================================
   release:
     needs: [build-server, build-client]
@@ -216,6 +189,7 @@ jobs:
 
       - name: Generate Release Tag
         id: tag
+        # 只要代码有变动 (SHA不同)，Tag 就会变，不会冲突
         run: echo "release_tag=v$(date +'%Y.%m.%d')-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Create Release
